--- a/config/feature_flags/interop_release_flags.yml
+++ b/config/feature_flags/interop_release_flags.yml
@@ -236,3 +236,21 @@ assignment_edit_placement_not_on_announcements:
       state: allowed_on
     ci:
       state: allowed_on
+allow_lti_tools_editor_button_placement_without_icon:
+  state: hidden
+  applies_to: RootAccount
+  display_name: Allow LTI tools to have an editor button icon without placement (use default tool icon)
+  description: |-
+    When disabled, new or updated ContextExternalTool installations (including
+    LTI 1.3 tools updated automatically due to updates to their developer keys)
+    will have their editor_button placement removed if there is no icon_url or
+    canvas_icon_class provided in the settings (legacy behavior). When enabled,
+    the placement is not removed, so tools without icons will show a default
+    icon (with a color / letter based on tool name and tool/developer key ID).
+  environments:
+    development:
+      state: allowed_on
+    test:
+      state: allowed_on
+    ci:
+      state: allowed_on
